--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <h1>sang sang</h1>
 <h1>thien thien</h1>
 <h1>thien thien</h1>
-<<<<<<< HEAD
-<
+
+
 					<img src="pic1/trang.png">
 				</div>
 				<div class="line"></div>
@@ -79,8 +79,8 @@
 
 
 			<div class="bxx1">
-=======
-<h1>thien thien</h1
->>>>>>> 73b2603bb8a14f515319ddf4d42481904fc3e854
+
+<h1>thien thien</h1>
+
 </body>
 </html>
